# TFG

./: meson.build  pyproject.toml  qops.c
src/_build_utils/: version.py
src/doki/: doki.c  funciones_auxiliares.c  funciones_auxiliares.h  meson.build  platform.h  qgate.h  qops.c  qops.h  qstate.c  qstate.h
tests/: run_doki.py
